--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "@anam-ai/js-sdk": "^4.6.0",
+    "@anam-ai/js-sdk": "4.7.0",
     "chatdio": "^1.2.1",
     "hono": "^4.10.7"
   },
